@@ -20,6 +20,7 @@
 - Output cracked hashes on Windows using \r\n and not \n
 - Replace RegGetValue() with RegQueryValueEx() to enable Windows XP 32 bit compatibility
 - Slightly increased NVidias rule-processing performance by using generic instructions instead of byte_perm()
+- Add support for @ rule (RULE_OP_MANGLE_PURGECHAR) to use on GPU
 
 ##
 ## Bugs
